# ew_2025_flutter_demo

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
assets/lottie/: fire.json  snow.json  spinning_fan.json
ew-2025-flutter-demo-can-lib/: .gitignore  CMakeLists.txt
ew-2025-flutter-demo-can-lib/cfg/: can_settings.ini
ew-2025-flutter-demo-can-lib/cmake/: Config.cmake.in  FlutterCanDependencies.cmake  FlutterCanInstall.cmake  FlutterCanSettings.cmake
ew-2025-flutter-demo-can-lib/example/: CMakeLists.txt  main.cpp
ew-2025-flutter-demo-can-lib/include/fluttercan/: can.hpp  can_settings.hpp  can_settings_parser.hpp  can_utils.hpp  ffi_export.hpp
ew-2025-flutter-demo-can-lib/proto/: measurement.proto
ew-2025-flutter-demo-can-lib/scripts/: format-code.sh
ew-2025-flutter-demo-can-lib/source/: can.cpp  can_settings_parser.cpp  flutter_iface.cpp
lib/: main.dart
lib/pages/: home_page.dart
lib/services/: boost_service.dart  home_setpoints_service.dart  sensor_board_service.dart  weather_forecast_service.dart
lib/utils/: string_utils.dart
lib/widgets/: day_forecast_widget.dart  heating_schedule_widget.dart  temperature_text_widget.dart  thermostat_status.dart  weather_forecast_widget.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
